@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.managecase.api.errorhandling;
 
+import com.google.common.collect.ImmutableList;
 import feign.FeignException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpHeaders;
@@ -11,13 +12,25 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+import uk.gov.hmcts.reform.managecase.api.errorhandling.noc.NoCApiConstraintError;
+import uk.gov.hmcts.reform.managecase.api.errorhandling.noc.NoCApiError;
+import uk.gov.hmcts.reform.managecase.api.errorhandling.noc.NoCException;
+import uk.gov.hmcts.reform.managecase.api.errorhandling.noc.NoCValidationError;
 
 import javax.validation.ValidationException;
+import java.util.Arrays;
 import java.util.List;
 
 @RestControllerAdvice
 @Slf4j
 public class RestExceptionHandler extends ResponseEntityExceptionHandler {
+
+    private static final List<String> NOC_CONSTRAINT_ERRORS = ImmutableList.of(
+        NoCValidationError.NOC_CASE_ID_EMPTY,
+        NoCValidationError.NOC_CASE_ID_INVALID,
+        NoCValidationError.NOC_CASE_ID_INVALID_LENGTH,
+        NoCValidationError.NOC_CHALLENGE_QUESTION_ANSWERS_EMPTY
+    );
 
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(
@@ -53,6 +66,12 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
         return toResponseEntity(HttpStatus.NOT_FOUND, ex.getLocalizedMessage());
     }
 
+    @ExceptionHandler(NoCException.class)
+    public ResponseEntity<Object> handleNoCException(NoCException ex) {
+        log.debug("NoC Validation exception: {}", ex.getMessage(), ex);
+        return toNoCResponseEntity(HttpStatus.BAD_REQUEST, ex.getErrorMessage(), ex.getErrorCode());
+    }
+
     @ExceptionHandler(CaseIdLuhnException.class)
     public ResponseEntity<Object> handleCaseIdLuhnException(CaseIdLuhnException ex) {
         log.error("Data Store errors: {}", ex.getMessage(), ex);
@@ -71,8 +90,56 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
         return toResponseEntity(HttpStatus.INTERNAL_SERVER_ERROR, ex.getLocalizedMessage());
     }
 
-    private ResponseEntity<Object> toResponseEntity(HttpStatus status, String errorMessage, String... errors) {
-        ApiError apiError = new ApiError(status, errorMessage, errors == null ? null : List.of(errors));
+
+
+    private String[] convertNoCErrors(String[] errors) {
+        List<String> errorList = Arrays.asList(errors);
+        for (String error : errorList) {
+            for (String exception : NOC_CONSTRAINT_ERRORS) {
+                if (error.equals(exception)) {
+                    errorList.set(errorList.indexOf(exception), exception.substring(4));
+                    break;
+                }
+            }
+        }
+        return errorList.toArray(new String[0]);
+    }
+
+    private ResponseEntity<Object> handleConstraintErrors(String[] errorsToConvert, HttpStatus status) {
+        List<String> errorList = Arrays.asList(errorsToConvert);
+        String error = errorList.get(0);
+        for (String exception : NOC_CONSTRAINT_ERRORS) {
+            if (error.equals(exception)) {
+                String message = exception.substring(4);
+                String code = NoCValidationError.getCodeFromMessage(message);
+                String[] errors = convertNoCErrors(errorsToConvert);
+                if ((errorsToConvert.length > 1)) {
+                    NoCApiError apiError = new NoCApiError(status, message, code, List.of(errors));
+                    return new ResponseEntity<>(apiError, new HttpHeaders(), apiError.getStatus());
+                } else {
+                    NoCApiConstraintError apiError = new NoCApiConstraintError(status, code, List.of(errors)
+                    );
+                    return new ResponseEntity<>(apiError, new HttpHeaders(), apiError.getStatus());
+                }
+            }
+        }
+        return null;
+    }
+
+
+    private ResponseEntity<Object> toResponseEntity(HttpStatus status, String message, String... errors) {
+        if (errors != null && Arrays.stream(errors).anyMatch(NOC_CONSTRAINT_ERRORS::contains)) {
+            return handleConstraintErrors(errors, status);
+        }
+        ApiError apiError = new ApiError(status, message, errors == null ? null : List.of(errors));
+        return new ResponseEntity<>(apiError, new HttpHeaders(), apiError.getStatus());
+
+    }
+
+    private ResponseEntity<Object> toNoCResponseEntity(HttpStatus status, String message, String code,
+                                                       String... errors) {
+        NoCApiError apiError = new NoCApiError(status, message, code, errors == null ? null : List.of(errors)
+        );
         return new ResponseEntity<>(apiError, new HttpHeaders(), apiError.getStatus());
     }
 }
